--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
    <div id="header">
@@ -15,7 +16,7 @@
                 <li><a href="">Tour</a></li>
                 <li><a href="">Contact</a></li>
                 <li>
-                    <a href="#">More</a>
+                    <a href="#">More<i class="fas fa-angle-down"></i></a>
                     <ul id="navbar">
                         <li><a href="">Merchandise</a></li>
                         <li><a href="">Extras</a></li>
@@ -23,6 +24,15 @@
                     </ul>
                 </li>
          </ul>
+         <div class="search-btn">
+            <i class="nav-search fas fa-search"></i>
+         </div>
+  </div>
+  <div id="slide">
+      <div class="text-content">
+        <h2>New York</h2>
+        <p>The atmosphere in New York is lorem ipsum</p>
+      </div>
   </div>
 </body>
 </html>
