--- a/index.html
+++ b/index.html
@@ -57,5 +57,18 @@
           </li>
       </ul>
   </div>
+  <div class="tourdates">
+      <div id="content">
+        <div class="content-section">
+            <h2 class="section-heading">Tour Dates</h2>
+            <p class="section-sub-heading">Remember to book your tickets!</p>
+        </div>
+        <ul class="tickets">
+            <li class="ticket">September <span class="spanleft">Sold Out</span></li>
+            <li class="ticket">October <span class="spanleft">Sold Out</span></li>
+            <li class="ticket">November <span id="spanright">3</span></li>
+        </ul>
+      </div>
+  </div>
 </body>
 </html>
