--- a/index.html
+++ b/index.html
@@ -63,11 +63,41 @@
             <h2 class="section-heading">Tour Dates</h2>
             <p class="section-sub-heading">Remember to book your tickets!</p>
         </div>
+        <br>
         <ul class="tickets">
             <li class="ticket">September <span class="spanleft">Sold Out</span></li>
             <li class="ticket">October <span class="spanleft">Sold Out</span></li>
             <li class="ticket">November <span id="spanright">3</span></li>
         </ul>
+        <div class="buytickets">
+            <div class="locations">
+                <img src="https://www.w3schools.com/w3images/newyork.jpg">
+                <div class="location">
+                    <h3>New York</h3>
+                    <p class="date">Fri 27 Nov 2016</p>
+                    <p class="sub-date">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                    <section>Buy Tickets</section>
+                </div>
+            </div>
+            <div class="locations">
+                <img src="https://www.w3schools.com/w3images/sanfran.jpg">
+                <div class="location">
+                    <h3>New York</h3>
+                    <p class="date">Fri 27 Nov 2016</p>
+                    <p class="sub-date">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                    <section>Buy Tickets</section>
+                </div>
+            </div>
+            <div class="locations">
+                <img src="https://www.w3schools.com/w3images/paris.jpg">
+                <div class="location">
+                    <h3>New York</h3>
+                    <p class="date">Fri 27 Nov 2016</p>
+                    <p class="sub-date">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                    <section>Buy Tickets</section>
+                </div>
+            </div>
+        </div>
       </div>
   </div>
 </body>
