--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         </ul>
         <div class="buytickets">
             <div class="locations">
-                <img src="https://www.w3schools.com/w3images/newyork.jpg">
+                <div class="img-ticket">
+                    <img src="https://www.w3schools.com/w3images/newyork.jpg">
+                    <div class="box"></div>
+                </div>
                 <div class="location">
                     <h3>New York</h3>
                     <p class="date">Fri 27 Nov 2016</p>
@@ -80,23 +83,30 @@
                 </div>
             </div>
             <div class="locations">
-                <img src="https://www.w3schools.com/w3images/sanfran.jpg">
+                <div class="img-ticket">
+                    <img src="https://www.w3schools.com/w3images/paris.jpg">
+                    <div class="box"></div>
+                </div>
                 <div class="location">
-                    <h3>New York</h3>
-                    <p class="date">Fri 27 Nov 2016</p>
+                    <h3>Paris</h3>
+                    <p class="date">Sat 28 Nov 2016</p>
                     <p class="sub-date">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                     <section>Buy Tickets</section>
                 </div>
             </div>
             <div class="locations">
-                <img src="https://www.w3schools.com/w3images/paris.jpg">
+                <div class="img-ticket">
+                    <img src="https://www.w3schools.com/w3images/sanfran.jpg">
+                    <div class="box"></div>
+                </div>
                 <div class="location">
-                    <h3>New York</h3>
-                    <p class="date">Fri 27 Nov 2016</p>
+                    <h3>San Fransico</h3>
+                    <p class="date">Sun 29 Nov 2016</p>
                     <p class="sub-date">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                     <section>Buy Tickets</section>
                 </div>
             </div>
+            
         </div>
       </div>
   </div>
