--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
             <div class="modal-body">
                 <lable class="modal-lable">
                     <i class="fas fa-cart-plus"></i>
-                    <p>Tickets, $15 per person</p>
+                    <p> Tickets, $15 per person</p>
                 </lable>
                 <input type="text" class="modal-input" placeholder="How many?">
                 <lable class="modal-lable">
                     <i class="fas fa-user"></i>
-                    <p>Send to</p>
+                    <p> Send to</p>
                 </lable>
                 <input type="text" class="modal-input" placeholder="Enter email">
                 <section class="modal-pay">
-                    <p>Pay<i class="far fa-check-circle"></i></p>
+                    <p>Pay<i class="fas fa-check"></i></p>
                 </section>
                 <div class="modal-footer">
-                    <p>Need <a href="#">help</a></p>
+                    <p>Need <a href="#">help?</a></p>
                 </div>
             </div>
             
