--- a/index.html
+++ b/index.html
@@ -116,14 +116,26 @@
             <p class="section-sub-heading">Remember to book your tickets!</p>
         </div>
         <div class="row">
-            <div class="col col-left">
-
-            </div>
-            <div class="col col-right">
-
+            <ul class="row-left">
+                <li><i class="fas fa-map-marker-alt"></i>Chicago, US</li><br>
+                <li><i class="fas fa-phone-alt"></i>Phone: +00 151515</li><br>
+                <li><i class="fas fa-envelope"></i>Email</li>
+            </ul>
+            <div class="row-right">
+                <ul>
+                    <li><input type="text" placeholder="Name"></li>
+                    <li><input type="text" placeholder="Email"></li>
+                </ul>
+                <input type="text" placeholder="Message">
+                <section>
+                    <a href="#">Send</a>
+                </section>             
             </div>
         </div>
       </div>
+  </div>
+  <div class="map">
+      <img src="https://www.w3schools.com/w3images/map.jpg">
   </div>
   <div class="modal">
         
@@ -156,6 +168,19 @@
             </div>
             
         </div>
+  </div>
+  <div class="end">
+      <div id="content">
+        <div class="content-section">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-snapchat"></i>
+            <i class="fab fa-pinterest"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
+        </div>
+      </div>
   </div>
 </body>
 </html>
